# DCI-Agent-Lite

./: .env.template  .gitignore  Makefile  README.md  pi-revision.txt  pyproject.toml  setup.sh
.cargo/: config.toml
asterion/: .env.template  .gitignore  LICENSE  Makefile  README.md  pi-revision.txt  pyproject.toml
asterion/.github/workflows/: ci.yml
asterion/docs/: README.md
asterion/docs/architecture/: agent-framework.md  application-runner.md  asterion-framework-capability-integration.md  asterion-framework-layout.md  asterion-standalone-extraction.md  capability-execution.md  composable-packages.md  controlled-code-validation-packages.md  local-package-catalog.md  static-application-assembly.md
asterion/docs/guides/: asterion-capability-usage.md  asterion-dci-complete-reference.md
asterion/docs/operator/: rust-executor.md
asterion/docs/verification/: asterion-dci-validation-guide.md
asterion/examples/: README.md  asterion_dci_basic_example.sh  asterion_dci_runtime_context_example.sh
asterion/schemas/agent-runtime/v1/: run-request.schema.json
asterion/schemas/assembly/v1/: assembly.schema.json
asterion/schemas/executor/v1/: request.schema.json  response.schema.json
asterion/scripts/: setup_pi.sh
asterion/scripts/bcplus_eval/: run_L3.sh  run_bcplus_eval_openai.sh
asterion/scripts/beir/: benchmark_arguana.sh  benchmark_scifact.sh
asterion/scripts/bright/: run_bio.sh  run_earth_science.sh  run_economics.sh  run_robotics.sh
asterion/scripts/examples/: asterion_dci_basic_example.sh  asterion_dci_runtime_context_example.sh
asterion/scripts/qa/: run_2wikimultihopqa_dev_sample50.sh  run_bamboogle_test_sample50.sh  run_hotpotqa_dev_sample50.sh  run_musique_dev_sample50.sh  run_nq_test_sample50.sh  run_triviaqa_test_sample50.sh
asterion/src/asterion/: cli.py
asterion/src/asterion/applications/: __init__.py  discovery.py  provider.py
asterion/tests/: test_application_discovery.py  test_application_selection.py  test_asterion_claude_runtime.py  test_asterion_cli.py  test_asterion_dci_benchmark.py  test_asterion_dci_bridge.py  test_asterion_dci_verification.py  test_asterion_pi_runtime.py  test_builtin_controlled_code_application.py  test_capability_product.py  test_check_promotion.py  test_controlled_code_application.py  test_controlled_executor_jsonl.py  test_controlled_executor_service.py  test_dci_complete_application.py  test_dci_research_capability.py  test_default_runtime_factory.py  test_installed_application_provider.py  test_managed_controlled_executor.py  test_package_execution.py  test_project_boundary.py  test_resource_setup.py  test_setup_pi.py  test_standalone_launchers.py  test_standalone_repository.py
asterion/tools/: __init__.py  check_docs.py  check_promotion.py  setup_resources.py
capabilities/dci-research/: pyproject.toml
(+402 files in other folders)
