[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dci"
version = "0.1.0"
description = "High Resolution Corpus Interaction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.91.0",
    "datasets",
    "httpx>=0.28.1",
    "huggingface-hub",
    "matplotlib",
    "numpy",
    "pyarrow",
    "python-dotenv>=1.0.0",
    "scipy",
    "tqdm",
]

[project.scripts]
dci-export-bc-plus-docs = "dci.benchmark.export_bc_plus_docs:main"
dci-export-bright-docs = "dci.benchmark.export_bright_docs:main"
dci-agent-lite = "dci.benchmark.pi_rpc_runner:main"
dci-run-pi-rpc = "dci.benchmark.pi_rpc_runner:main"
dci-print-pi-system-prompt = "dci.benchmark.pi_system_prompt:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/asterion",
    "src/dci",
    "capabilities/dci-research/src/asterion_dci_research",
]
