[project]
name = "asterion-workspace"
version = "0.1.0"
description = "Development workspace for Asterion and the DCI source baseline"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.91.0",
    "datasets",
    "httpx>=0.28.1",
    "huggingface-hub",
    "matplotlib",
    "numpy",
    "pyarrow",
    "python-dotenv>=1.0.0",
    "scipy",
    "tqdm",
    "asterion",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[tool.uv.sources]
asterion = { workspace = true }

[tool.uv.workspace]
members = ["asterion"]
