[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asterion-dci-research"
version = "0.1.0"
description = "DCI local-corpus research capability for Asterion"
requires-python = ">=3.10"
dependencies = ["asterion>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/asterion_dci_research"]
